<resources>
    <string name="app_name">Android Labs</string>
    <string name="title_home">Home</string>
    <string name="color_picker">Color picker</string>
    <string name="title_notifications">Notifications</string>
    <string name="done">Done</string>
    <string name="cancel_message">Cancel</string>
    <string name="notes">Notes</string>
    <string name="calculator">Calculator</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="clear">Clear</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="player">Player</string>

    <array name="themes_array">
        <item>Dark Theme</item>
        <item>Light theme</item>
    </array>

    <array name="themes_array_entries">
        <item>Dark Theme</item>
        <item>Light theme</item>
    </array>

    <array name="text_styles_array">
        <item>Regular</item>
        <item>Light</item>
    </array>

    <array name="text_styles_array_entries">
        <item>Regular</item>
        <item>Light</item>
    </array>
</resources>
