<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="205dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="Filters "
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btnClear"
                style="@style/TextAppearance.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/clear"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9b9b9b" />

        <RadioGroup
            android:id="@+id/rgImportance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/lowPriority"
                style="@style/AlertDialog.AppCompat.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blueHighlight"
                android:text="@string/low"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/mediumPriority"
                style="@style/AlertDialog.AppCompat.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/medium"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/highPriority"
                style="@style/AlertDialog.AppCompat.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/redHighlight"
                android:text="@string/high"
                android:textSize="14sp" />
        </RadioGroup>
    </LinearLayout>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/txtSearchNote"
        style="@style/TextAppearance.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="bottom"
        android:drawableLeft="@drawable/ic_search"
        app:met_iconPadding="4dp"
        android:gravity="center"
        android:hint="@string/search_your_notes" />


</FrameLayout>